modified crate categories in  cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/Cedar-81/SubmergeUI"
 # documentation = "https://docs.rs/your_crate_name"        
 readme = "DOCUMENTATION.md"
 keywords = ["bevy", "bevy_ecs", "tailwind", "bevy_ui", "submerge_ui"]
-categories = ["GUI", "Game engines", "Games", "Graphics"]
+categories = ["game-development", "graphics", "gui", "rendering"]
 
 
 [dependencies]
