--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.14.1", features = ["bevy_text"] }
+bevy_mod_picking = "0.20.1"
 pest = "2.7.11"
 pest_derive = "2.7.11"
 regex = "1.10.6"
